@@ -1,3 +1,9 @@
+2002-09-05  Keith Seitz  <keiths@redhat.com>
+
+	* lib/mi-support.exp (mi_runto): New proc. Does the same as gdb's
+	runto proc.
+	(mi_run_to_main): Use mi_runto.
+
 2002-09-04  Keith Seitz  <keiths@redhat.com>
 
 	* lib/mi-support.exp (mi_run_to_main): Allow anything to precede
